# rigol-dho824-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
manuals/: DHO800900_ProgrammingGuide_EN.md  DHO800_DataSheet_EN.md  DHO800_UserGuide_EN.md
src/rigol_dho824_mcp/: __init__.py  file_list.py  server2.py
src/rigol_dho824_mcp/tools/: acquire2.py  channel2.py  common2.py  decode2.py  horizontal2.py  measure2.py  multimeter2.py  trigger2.py  utility2.py  waveform2.py
tests/: conftest.py  test_acquire_v2.py  test_channel_v2.py  test_decode_v2.py  test_horizontal_v2.py  test_measure_v2.py  test_multimeter_v2.py  test_trigger_v2.py  test_utility_v2.py  test_waveform_v2.py
